# ai-os

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
ai-shell/: requirements.txt  shell.py
buildroot-external/: Config.in  external.desc  external.mk
buildroot-external/board/ai-os/: post-build.sh
buildroot-external/board/meerkatos/: post-build.sh
buildroot-external/board/meetkatos/: post-build.sh
buildroot-external/configs/: ai_os_x86_64_defconfig
config/: agency.toml  knowledge.md.example
debian/: changelog  control  rules
docs/: ARCHITECTURE.md  GETTING_STARTED.md  devops-comparison.md
services/: meerai-agent-user.service  meerai-agent.service
services/ai-runtime/: run
services/ai-shell-tty1/: run
services/system-agent/: run
system-agent/: agent.py  audit.py  events.py  knowledge.py  policy.py  requirements.txt
tests/: __init__.py  conftest.py  test_agent.py  test_events.py  test_knowledge.py  test_policy.py  test_shell.py
